syntax = "proto2";

package nagax.router.api;

option go_package = "github.com/octavore/nagax/proto/router/api";

enum ErrorCode {
  internal_server_error = 500;
  moved_permanently = 301;
  found = 302;
  bad_request = 400;
  not_authorized = 401;
  forbidden = 403;
  not_found = 404;
}

message Error {
  optional int32 code = 1;
  optional ErrorCode title = 2; // corresponds to code, e.g. not_found, internal_server_error
  optional string detail = 3; // optional long message
  // optional string field = 4; // optionally indicate field with error
}

message ErrorResponse {
  repeated Error errors = 1;
}

